[gd_scene load_steps=2 format=3 uid="uid://d0g5g5g5g5g5g"]

[ext_resource type="Script" uid="uid://d2ccgm30qg307" path="res://pages/register/register.gd" id="1_f5dgr"]

[node name="RegisterScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5dgr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NicknameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Nickname"

[node name="NicknameEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="PasswordEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
secret = true

[node name="EmailLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Email (Optional)"

[node name="EmailEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RegisterButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Register"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="ErrorLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
